--- a/public/slides/2020s1STA5173_0/l1.html
+++ b/public/slides/2020s1STA5173_0/l1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>STA 326 2.0 Programming and Data Analysis with R</title>
+    <title>STA 517 3.0 Programming and Statistical Computing with R</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr Thiyanga Talagala" />
-    <meta name="date" content="2020-02-11" />
+    <meta name="date" content="2020-08-15" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
     <link href="libs/remark-css/duke-blue.css" rel="stylesheet" />
@@ -16,10 +16,10 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# STA 326 2.0 Programming and Data Analysis with R
+# STA 517 3.0 Programming and Statistical Computing with R
 ## Lesson 1: Introduction to R
 ### Dr Thiyanga Talagala
-### 2020-02-11
+### 2020-08-15
 
 ---
 
@@ -33,7 +33,8 @@ class: center, middle, inverse, title-slide
 
 - Parent language: S
 
-- The latest R version 3.6.2 has been released on 2019-12-12
+- The latest R version 4.0.2 has been released on 2020-06-22
+
 
 ![description of the image](RobertandRoss.jpg)
 
@@ -49,6 +50,12 @@ class: center, middle, inverse, title-slide
 
 - **Community:** Large global community friendly and helpful, lots of resources
 
+---
+background-image: url('rladiesclb.png')
+background-position: center
+background-size: cover
+
+# https://rladiescolombo.netlify.app/
 ---
 
 background-image: url('renv.png')
@@ -153,8 +160,8 @@ rnorm(10)
 ```
 
 ```
- [1] -1.35964206 -1.47987331 -0.87844115 -0.09558811 -0.79170771  0.60716241
- [7]  1.28956017  1.11240342  1.12086340  0.97118210
+ [1] -1.5191800 -1.9075754  1.5775224  0.8658678 -1.1652501 -0.5721229
+ [7]  0.2591390 -1.0117884 -0.4539240  0.5140727
 ```
 
 --
@@ -168,8 +175,8 @@ a
 ```
 
 ```
- [1] -1.0041032 -0.2125746  1.1666413  1.4861161  1.3020677 -1.7333631
- [7]  1.1198432  1.6120494 -0.8737365 -0.2607107
+ [1] -0.5068665 -0.2044397 -0.4645673  0.8112602  0.5745866 -0.4750739
+ [7] -0.2298137  0.5468633  1.4994108 -0.2523359
 ```
 
 --
@@ -181,8 +188,8 @@ b
 ```
 
 ```
- [1] -100.41032  -21.25746  116.66413  148.61161  130.20677 -173.33631
- [7]  111.98432  161.20494  -87.37365  -26.07107
+ [1] -50.68665 -20.44397 -46.45673  81.12602  57.45866 -47.50739 -22.98137
+ [8]  54.68633 149.94108 -25.23359
 ```
 
 ---
@@ -277,8 +284,8 @@ rnorm(10) # This is a comment
 ```
 
 ```
- [1] -1.02616444 -0.04841736  0.24375144  0.13722723 -1.28152719  0.58674356
- [7]  0.55622426 -0.82593117 -0.60589038  0.57995837
+ [1] -0.7837583 -1.7500652 -0.6804586 -1.0128278 -1.0753192 -1.7139995
+ [7] -1.0009447  1.9085909  1.1529834 -0.7791458
 ```
 
 ```r
