--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -29,8 +29,7 @@
     
   
   <meta name="description" content="Here is your road map for the course!
- Week 0
- Help - R and R Studio Download and Install
+Week 0 Help - R and R Studio Download and Install
  Week 1-4: lectures (online)
  Week 1  Introduction and basics of R programming     📚Slides 📒 Reading-2.1, 2.2, 5.1 📊 Data Sets 📎 Problems 🔖Answers    Week 2  Data structures (Matrices, Arrays, List, Data frames, Factors)     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers    Week 3  Built-in functions in R     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers    Week 4  Writing functions in R and control structures     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers     Week 5-6: Discussion/practical (in class)">
 
@@ -128,8 +127,7 @@
   <meta property="og:url" content="/courses/rmsc2020/contentr/">
   <meta property="og:title" content="Schedule and Lectorials | THIYANGA TALAGALA">
   <meta property="og:description" content="Here is your road map for the course!
- Week 0
- Help - R and R Studio Download and Install
+Week 0 Help - R and R Studio Download and Install
  Week 1-4: lectures (online)
  Week 1  Introduction and basics of R programming     📚Slides 📒 Reading-2.1, 2.2, 5.1 📊 Data Sets 📎 Problems 🔖Answers    Week 2  Data structures (Matrices, Arrays, List, Data frames, Factors)     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers    Week 3  Built-in functions in R     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers    Week 4  Writing functions in R and control structures     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers     Week 5-6: Discussion/practical (in class)"><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
@@ -540,10 +538,7 @@
 
           <div class="article-style">
             <p>Here is your road map for the course!</p>
-<blockquote>
-<p>Week 0</p>
-</blockquote>
-<p><a href="https://edify-thiyanga.netlify.app/installation/">Help - R and R Studio Download and Install</a></p>
+<p><strong>Week 0</strong>  <a href="https://edify-thiyanga.netlify.app/installation/">Help - R and R Studio Download and Install</a></p>
 <blockquote>
 <p>Week 1-4: lectures (online)</p>
 </blockquote>
@@ -557,7 +552,7 @@
 <th align="center">📚<a href="/Slides/2020s1STA5173_0/l1.html">Slides</a></th>
 <th align="center">📒 <a href="https://rstudio-education.github.io/hopr/basics.html">Reading-2.1, 2.2, 5.1</a></th>
 <th align="center">📊 <a href="https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200210-sitrep-21-ncov.pdf?sfvrsn=947679ef_2">Data Sets</a></th>
-<th align="center">📎 Problems</th>
+<th align="center">📎 <a href="https://thiyanga.netlify.app/slides/2020s1sta5173_0/l1#61">Problems</a></th>
 <th align="center">🔖Answers</th>
 </tr>
 </thead>
