--- a/static/Slides/2020s1STA5173_0/l1.html
+++ b/static/Slides/2020s1STA5173_0/l1.html
@@ -160,8 +160,8 @@ rnorm(10)
 ```
 
 ```
- [1] -1.5191800 -1.9075754  1.5775224  0.8658678 -1.1652501 -0.5721229
- [7]  0.2591390 -1.0117884 -0.4539240  0.5140727
+ [1]  0.3140067  1.1388309 -1.4094654 -0.1045314  0.1997770  1.6149883
+ [7]  0.3680134  0.8116780  1.3723199  0.9585236
 ```
 
 --
@@ -175,8 +175,8 @@ a
 ```
 
 ```
- [1] -0.5068665 -0.2044397 -0.4645673  0.8112602  0.5745866 -0.4750739
- [7] -0.2298137  0.5468633  1.4994108 -0.2523359
+ [1] -0.38832350 -1.02634139  0.05260446 -0.10630111 -0.97056089  1.02788714
+ [7]  0.40208751  0.61909966  1.47584234 -1.04330009
 ```
 
 --
@@ -188,8 +188,8 @@ b
 ```
 
 ```
- [1] -50.68665 -20.44397 -46.45673  81.12602  57.45866 -47.50739 -22.98137
- [8]  54.68633 149.94108 -25.23359
+ [1]  -38.832350 -102.634139    5.260446  -10.630111  -97.056089  102.788714
+ [7]   40.208751   61.909966  147.584234 -104.330009
 ```
 
 ---
@@ -284,8 +284,8 @@ rnorm(10) # This is a comment
 ```
 
 ```
- [1] -0.7837583 -1.7500652 -0.6804586 -1.0128278 -1.0753192 -1.7139995
- [7] -1.0009447  1.9085909  1.1529834 -0.7791458
+ [1] -1.12463596  1.65632151  0.51318433 -1.20909422 -1.15188677 -1.16046395
+ [7] -1.01023358 -2.27030485 -1.03522283 -0.03778367
 ```
 
 ```r
@@ -1025,7 +1025,7 @@ first * second
 
 # Other vector operations
 
-- Please see the [cheatsheet](/pdf/baser.pdf) and course materials STA Data Analysis II
+- Please see the [cheatsheet](https://hellor.netlify.app/cheatsheets/baser.pdf).
 
 ---
 
@@ -1129,7 +1129,7 @@ background-size: cover
 ---
 class: center, middle
 
-Slides available at: hellor.netlify.com
+Slides available at: https://thiyanga.netlify.app/courses/rmsc2020/contentr/
 
 All rights reserved by [Thiyanga S. Talagala](https://thiyanga.netlify.com/)
     </textarea>
