--- a/public/courses/rmsc2020/contentr/index.html
+++ b/public/courses/rmsc2020/contentr/index.html
@@ -30,6 +30,7 @@
   
   <meta name="description" content="Here is your road map for the course!
 Week 0 Help - R and R Studio Download and Install
+📗
  Week 1-4: lectures (online)
  Week 1  Introduction and basics of R programming     📚Slides 📒 Reading-2.1, 2.2, 5.1 📊 Data Sets 📎 Problems 🔖Answers    Week 2  Data structures (Matrices, Arrays, List, Data frames, Factors)     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers    Week 3  Built-in functions in R     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers    Week 4  Writing functions in R and control structures     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers     Week 5-6: Discussion/practical (in class)">
 
@@ -128,6 +129,7 @@ Week 0 Help - R and R Studio Download and Install
   <meta property="og:title" content="Schedule and Lectorials | THIYANGA TALAGALA">
   <meta property="og:description" content="Here is your road map for the course!
 Week 0 Help - R and R Studio Download and Install
+📗
  Week 1-4: lectures (online)
  Week 1  Introduction and basics of R programming     📚Slides 📒 Reading-2.1, 2.2, 5.1 📊 Data Sets 📎 Problems 🔖Answers    Week 2  Data structures (Matrices, Arrays, List, Data frames, Factors)     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers    Week 3  Built-in functions in R     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers    Week 4  Writing functions in R and control structures     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers     Week 5-6: Discussion/practical (in class)"><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
@@ -539,6 +541,7 @@ Week 0 Help - R and R Studio Download and Install
           <div class="article-style">
             <p>Here is your road map for the course!</p>
 <p><strong>Week 0</strong>  <a href="https://edify-thiyanga.netlify.app/installation/">Help - R and R Studio Download and Install</a></p>
+<p><a href="/Slides/2020s1STA5173_0/l0.html">📗</a></p>
 <blockquote>
 <p>Week 1-4: lectures (online)</p>
 </blockquote>
