--- a/public/courses/sta33120_stochastic_processes_2020/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/index.html
@@ -505,7 +505,7 @@
             <h2 id="sta-331-20-stochastic-processes">STA 331 2.0 Stochastic Processes</h2>
 <p>BSc (Hons) Statistics, Department of Statistics, University of Sri Jayewardenepura.</p>
 <h2 id="course-information">Course information</h2>
-<p>Course outline: here</p>
+<p>Course outline: <a href="/Slides/2020s2StochasticProcesses/sta_331_20_stochastic_processes.pdf">here</a></p>
 <p>Year and Semester: 2020 - Semester 2</p>
 <p>Commencement date: 28 July 2020</p>
 <p>Course meeting time: Tuesday, 1.00pm - 3.00pm</p>
