--- a/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
@@ -29,7 +29,7 @@
     
   
   <meta name="description" content="Here is your road map for the course!
-Week 1  Introduction  Week 2 - 3  Markov Chains  📚 [Individual Assignment - week 3]
+Week 1  Introduction  Week 2 - 3  Markov Chains  📚 Individual Assignment - week 3
 Week 4  Classification of states   END
  ">
 
@@ -127,7 +127,7 @@ Week 4  Classification of states   END
   <meta property="og:url" content="/courses/sta33120_stochastic_processes_2020/contentr_stochastic/">
   <meta property="og:title" content="STA 331 2.0 Stochastic Processes | THIYANGA TALAGALA">
   <meta property="og:description" content="Here is your road map for the course!
-Week 1  Introduction  Week 2 - 3  Markov Chains  📚 [Individual Assignment - week 3]
+Week 1  Introduction  Week 2 - 3  Markov Chains  📚 Individual Assignment - week 3
 Week 4  Classification of states   END
  "><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
@@ -524,7 +524,7 @@ Week 4  Classification of states   END
 <ul>
 <li><a href="/Slides/2020s2StochasticProcesses/2_stochastic_processes_2020.pdf">Markov Chains</a></li>
 </ul>
-<p>📚 [Individual Assignment - week 3]</p>
+<p>📚 <a href="https://github.com/thiyangt/STA33120_assignments/blob/master/2020/sta331_20_Assignment_1.md">Individual Assignment - week 3</a></p>
 <h3 id="week-4">Week 4</h3>
 <ul>
 <li><a href="/Slides/2020s2StochasticProcesses/3_stochastic_processes_2020.pdf">Classification of states</a></li>
