--- a/public/slides/2020s1STA5173_0/l2.html
+++ b/public/slides/2020s1STA5173_0/l2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>STA 326 2.0 Programming and Data Analysis with R</title>
+    <title>STA 517 3.0 Programming and Statistical Computing with R</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr Thiyanga Talagala" />
-    <meta name="date" content="2020-02-18" />
+    <meta name="date" content="2020-08-22" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
     <link href="libs/remark-css/duke-blue.css" rel="stylesheet" />
@@ -18,10 +18,10 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# STA 326 2.0 Programming and Data Analysis with R
+# STA 517 3.0 Programming and Statistical Computing with R
 ## Lesson 2: Data Structures
 ### Dr Thiyanga Talagala
-### 2020-02-18
+### 2020-08-22
 
 ---
 
@@ -81,7 +81,7 @@ a
 ```
 
 ```
-##  [1] 1 2 3 4 5 5 4 3 2 1
+ [1] 1 2 3 4 5 5 4 3 2 1
 ```
 
 ```r
@@ -90,8 +90,8 @@ a
 ```
 
 ```
-## a1 a2 a3 a4 a5 b1 b2 b3 b4 b5 
-##  1  2  3  4  5  5  4  3  2  1
+a1 a2 a3 a4 a5 b1 b2 b3 b4 b5 
+ 1  2  3  4  5  5  4  3  2  1 
 ```
 
 ---
@@ -238,7 +238,7 @@ class: duke-orange, center, middle
 3. Using the function `rep` , create the below sequence 1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4
 
 
-<div class="countdown" id="timer_5eeca132" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f41b2aa" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -502,7 +502,7 @@ background-image: url('slr.png')
 background-position: center
 background-size: contain
 
-<div class="countdown" id="timer_5eeca2db" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f41b022" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -669,7 +669,7 @@ matrix(1:20, ncol=5)
 [4,]    4    8   12   16   20
 ```
 
-<div class="countdown" id="timer_5eeca3e3" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f41b1f7" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1024,7 +1024,7 @@ background-image: url('datafr.png')
 background-position: center
 background-size: contain
 
-<div class="countdown" id="timer_5eeca188" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f41afcd" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1134,7 +1134,7 @@ Use	the	R	dataset	“iris”	to	answer	the	following	questions:
 8. How many rows in the iris dataset have `Petal.Length` larger than 5 and `Sepal.Width` smaller than 3?
 
 
-<div class="countdown" id="timer_5eeca24f" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f41b2de" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ---
@@ -1682,7 +1682,7 @@ list("green",12.3)
 ---
 class: center, middle
 
-Slides available at: hellor.netlify.com
+Slides available at: https://thiyanga.netlify.app/courses/rmsc2020/
 
 All rights reserved by [Thiyanga S. Talagala](https://thiyanga.netlify.com/)
     </textarea>
