update stochastic slides

--- a/public/slides/2020s1STA5173_0/l2.html
+++ b/public/slides/2020s1STA5173_0/l2.html
@@ -238,7 +238,7 @@ class: duke-orange, center, middle
 3. Using the function `rep` , create the below sequence 1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4
 
 
-<div class="countdown" id="timer_5f41bd70" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4204fd" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -502,7 +502,7 @@ background-image: url('slr.png')
 background-position: center
 background-size: contain
 
-<div class="countdown" id="timer_5f41be56" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4204cc" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -669,7 +669,7 @@ matrix(1:20, ncol=5)
 [4,]    4    8   12   16   20
 ```
 
-<div class="countdown" id="timer_5f41bcd4" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4204e2" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1024,7 +1024,7 @@ background-image: url('datafr.png')
 background-position: center
 background-size: contain
 
-<div class="countdown" id="timer_5f41be5e" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4205e0" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1134,7 +1134,7 @@ Use	the	R	dataset	“iris”	to	answer	the	following	questions:
 8. How many rows in the iris dataset have `Petal.Length` larger than 5 and `Sepal.Width` smaller than 3?
 
 
-<div class="countdown" id="timer_5f41bee9" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4204c3" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ---
