--- a/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
+++ b/public/courses/sta33120_stochastic_processes_2020/contentr_stochastic/index.html
@@ -30,7 +30,7 @@
   
   <meta name="description" content="Here is your road map for the course!
 Week 1  Introduction  Week 2 - 3  Markov Chains  📚 Individual Assignment - week 3
-Week 4  Classification of states   END
+Week 4  Classification of states  Week 5  Limiting Probabilities   END
  ">
 
   
@@ -128,7 +128,7 @@ Week 4  Classification of states   END
   <meta property="og:title" content="STA 331 2.0 Stochastic Processes | THIYANGA TALAGALA">
   <meta property="og:description" content="Here is your road map for the course!
 Week 1  Introduction  Week 2 - 3  Markov Chains  📚 Individual Assignment - week 3
-Week 4  Classification of states   END
+Week 4  Classification of states  Week 5  Limiting Probabilities   END
  "><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -498,6 +498,7 @@ Week 4  Classification of states   END
         <li><a href="#week-1">Week 1</a></li>
         <li><a href="#week-2---3">Week 2 - 3</a></li>
         <li><a href="#week-4">Week 4</a></li>
+        <li><a href="#week-5">Week 5</a></li>
       </ul>
     </li>
   </ul>
@@ -528,6 +529,10 @@ Week 4  Classification of states   END
 <h3 id="week-4">Week 4</h3>
 <ul>
 <li><a href="/Slides/2020s2StochasticProcesses/3_stochastic_processes_2020.pdf">Classification of states</a></li>
+</ul>
+<h3 id="week-5">Week 5</h3>
+<ul>
+<li><a href="/Slides/2020s2StochasticProcesses/4_stochastic_processes_2020.pdf">Limiting Probabilities</a></li>
 </ul>
 <blockquote>
 <p>END</p>
