--- a/public/courses/regression2020/contentreg/index.html
+++ b/public/courses/regression2020/contentreg/index.html
@@ -36,7 +36,7 @@
   Correlation
   Least-squares estimation of the parameters
     Basics of R programming
-     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers    Week 2   Simple linear regression (cont.">
+     📚Slides 📒 [Reading-Ch1 Introduction to Linear Regression Analysis] 📊 Data Sets - anscombe 📎 Problems 🔖Answers    Week 2   Simple linear regression (cont.">
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/regression2020/contentreg/">
@@ -139,7 +139,7 @@
   Correlation
   Least-squares estimation of the parameters
     Basics of R programming
-     📚Slides 📒 Reading 📊 Data Sets 📎 Problems 🔖Answers    Week 2   Simple linear regression (cont."><meta property="og:image" content="/img/icon-192.png">
+     📚Slides 📒 [Reading-Ch1 Introduction to Linear Regression Analysis] 📊 Data Sets - anscombe 📎 Problems 🔖Answers    Week 2   Simple linear regression (cont."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -577,9 +577,9 @@
 <table>
 <thead>
 <tr>
-<th align="center">📚Slides</th>
-<th align="center">📒 Reading</th>
-<th align="center">📊 Data Sets</th>
+<th align="center">📚<a href="https://edify-thiyanga.netlify.app/regression/regression1.html#1">Slides</a></th>
+<th align="center">📒 [Reading-Ch1 Introduction to Linear Regression Analysis]</th>
+<th align="center">📊 Data Sets - <code>anscombe</code></th>
 <th align="center">📎 Problems</th>
 <th align="center">🔖Answers</th>
 </tr>
