--- a/public/courses/regression2020/index.html
+++ b/public/courses/regression2020/index.html
@@ -513,7 +513,7 @@
             <h2 id="sta-506-20-linear-regression-analysis">STA 506 2.0 Linear Regression Analysis</h2>
 <p>Postgraduate Certificate Program in Applied Statistics, Department of Statistics, University of Sri Jayewardenepura.</p>
 <h2 id="course-information">Course information</h2>
-<p>Course outline: here</p>
+<p>Course outline: <a href="/CO/2020s1/STA5062.0/STA_506_2.0_LinearRegressionAnalysis_2020S1.pdf">here</a></p>
 <p>Year and Semester: 2020 - Semester 1</p>
 <p>Commencement date: 29 August 2020</p>
 <p>Course meeting time: Saturday, 2.00pm - 4.00pm</p>
